app/styles/app.scss
html, body {
    background-color: #F2F2F2;
    font-family: Helvetica, Arial, sans-serif;
    font-size: 18px;
    height: 100%;
    margin: 0;
    padding: 0;
    width: 100%;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}


.site-head {
    background-color: #F6F6F6;

    display: flex;
    flex-direction: row;
    width: 100%;
    a {
        flex: 1;
        padding: 1rem;
        text-align: center;
        text-decoration: none;
        color: #B7B2AE;        
        font-size: 14px;
        font-weight: 300;
        &.active {
            color: #25ABBF;
            border-bottom: solid 2px #25ABBF;
            font-weight: 700;
        }
    }

}




.events {
    color: #fff;
    width: 100%;
}

.event-card {
    background-size: cover;
	box-sizing: border-box;
    height: 200px;
    width: 100%;
    padding: 20px;
    position: relative;

    .event-info {
        bottom: 0;
        font-size: 0.75rem;
        left: 0;
        position: absolute;
        width: 100%;
        
        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&amp;0+0,0.65+53,0.75+100 */
        background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 53%, rgba(0,0,0,0.75) 100%); /* FF3.6+ */
        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(53%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0.75))); /* Chrome,Safari4+ */
        background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 53%,rgba(0,0,0,0.75) 100%); /* Chrome10+,Safari5.1+ */
        background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 53%,rgba(0,0,0,0.75) 100%); /* Opera 11.10+ */
        background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 53%,rgba(0,0,0,0.75) 100%); /* IE10+ */
        background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 53%,rgba(0,0,0,0.75) 100%); /* W3C */
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#bf000000',GradientType=0 ); /* IE6-9 */


        li {
            margin-left: 20px;
            margin-bottom: 20px;
            color: #B7B2AE;
            display: inline-block;
        }

        > h2 {
            margin-left: 20px;
            font-size: 24px;
            font-weight: 300;
            margin-bottom: 0px;
        }

    }

    .star {
        background: url('/assets/img/gray-star-headliner.png');
        background-size: 30px 30px;
        display: block;
        height: 30px;
        position: absolute;
        right: 15px;
        top: 15px;
        width: 30px;

        &.active {
            background: url('/assets/img/gold-star-headliner.png');
            background-size: 30px 30px;
        }

    }
}

.times {
    position: relative;

    .start-time {
        color: #D83942;
        font-size: 13px;
        font-weight: 200;
        display: inline;
        float:left;
        padding-top: 10px;
        padding-bottom: 6px;
        width: 50px;
        text-align: center;
        background: #F2F2F2;
        position: relative;
        z-index: 1;
        margin-top: -4px;
    }

}
.dotted {
    border-left: dashed 1px #CCCCCC;
    height: 100%;
    left: 25px;
    width: 1px;
    display: inline;
    position: absolute;
    z-index: 0;
}

.event-card-sm {
    list-style-type: none;
    position: relative;

    .event-info {
        background: white;
        margin: 3px 9px 3px 50px;
        padding: 14px 11px 14px 11px;
        font-size: 13px;
        line-height: 17px;
        color: #999999;
        font-weight: 200;
        h3 {
            color: #16ABC1;
            font-size: 14px;
            font-weight: 700;
            margin: 0;
        }
    }
    .star {
        display: block;
        position: absolute;
        background: url('/assets/img/gray-star-list.png');
        background-size: 20px 20px;
        height: 20px;
        width: 20px;
        top: 29px;
        right: 25px;

        &.active {
            background: url('/assets/img/gold-star-list.png');
            background-size: 20px 20px;
        }
    }
}

